--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
   width: 60%;
   border: 2px solid red;
   margin-right: 40%;
+  background-color: #ff0000;
 }
 
 .during {
@@ -10,6 +11,7 @@
   width: 60%;
   border: 2px solid blue;
   margin-left: 40%;
+  background-color: #abff04;
 
 }
 
@@ -18,6 +20,7 @@
   float:left;
   margin-right: 40%;
   width: 60%;
+  background-color: #ab09de;
 }
 
 .img {
